examples/compiler_errors/adversarial/common_dev_mistakes/PrivateMemberAccess.flx
// expect: compile_error
// expect-error: E011

import HiddenApi

module PrivateMemberAccess {
    fn leak() -> Int {
        HiddenApi._private_secret()
    }
}
